# CrisisPilot-Slack

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  slack_setup.py
core/: __init__.py  config.py  errors.py  metrics.py  notifications.py  services.py  state.py
core/llm/: __init__.py  base.py  exceptions.py  guardrails.py  models.py
core/orchestration/: __init__.py  base.py  models.py  registry.py  supervisor.py
features/: __init__.py
features/analytics/: formatter.py  scheduler.py  schemas.py  service.py  slack_handlers.py
features/archived/: slack_handlers.py
features/evidence/: __init__.py  domain.py  exceptions.py  models.py  repository.py  schemas.py  service.py  slack_handlers.py
features/incident_management/: __init__.py  domain.py  exceptions.py  models.py  repository.py  schemas.py  service.py  slack_handlers.py
features/mini_agents/: __init__.py  agents.py  domain.py  exceptions.py  factory.py  intelligent_agent.py  models.py  prompts.py  reasoning.py  repository.py  service.py  slack_handlers.py
features/mission_execution/: __init__.py  domain.py  engine.py  exceptions.py  runner.py  scheduler.py  strategies.py
features/missions/: __init__.py  domain.py  exceptions.py  models.py  repository.py  schemas.py  service.py  slack_handlers.py
features/monitoring/: __init__.py  domain.py  evaluator.py  exceptions.py  models.py  notification_policy.py  repository.py  schemas.py  service.py  slack_handlers.py
features/news_monitor/: __init__.py
features/notifications/: __init__.py
features/operations/: __init__.py  domain.py  exceptions.py  models.py  repository.py  schemas.py  service.py  slack_handlers.py
features/organization/: __init__.py
features/recommendations/: __init__.py  domain.py  exceptions.py  intelligence.py  models.py  repository.py  router.py  rules.py  schemas.py  service.py
features/summaries/: __init__.py
features/timeline/: __init__.py  domain.py  exceptions.py  models.py  repository.py  schemas.py  service.py  (+1 more)
infrastructure/: __init__.py  database.py  logger.py  slack.py  slack_integration.py
shared/: __init__.py  repository.py
storage/: .gitkeep
tests/: conftest.py
(+77 files in other folders)
